feat: added Health Endpoint returning sync status.
